--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <title>Check-mate</title>
     <link rel="stylesheet" href="assets/css/main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="assets/css/libs/bootstrap.min.css" rel="stylesheet"/>
+    <script src="assets/js/libs/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <div class="container-custom">
     <div class="row h-100">
-        <!-- start navbar -->
         <div class="d-flex">
-            <div class="h-100 bg-custom-light-blue col-1 pt-1" style="border-right: 1px solid #0056b3;">
+            <!-- start navbar -->
+            <div class="h-100 bg-custom-light-blue col-2 pt-1" style="border-right: 1px solid #0056b3;">
                 <div class="w-100 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <img class="rounded" src="assets/icons/logo.webp" alt="check-mate logo" width="30px"
@@ -21,34 +21,39 @@
                         <h6 class="text-white text-center">CM</h6>
                     </div>
                 </div>
-                <div class="d-flex flex-column mt-5">
+                <div class="d-flex flex-column mt-5 nav nav-pills">
                     <div class="mb-2 text-center">
-                        <a href="#" class="text-custom-dark-blue">Enum 1</a>
+                        <a href="#tab1" class="nav-link text-custom-dark-blue" data-bs-toggle="tab">Enum 1</a>
                     </div>
                     <div class="mb-2 text-center">
-                        <a href="#" class="text-custom-dark-blue">Enum 2</a>
+                        <a href="#tab2" class="nav-link text-custom-dark-blue" data-bs-toggle="tab">Enum 2</a>
                     </div>
                     <div class="mb-2 text-center">
-                        <a href="#" class="text-custom-dark-blue">Enum 3</a>
+                        <a href="#tab3" class="nav-link text-custom-dark-blue" data-bs-toggle="tab">Enum 3</a>
                     </div>
                     <div class="mb-2 text-center">
-                        <a href="#" class="text-custom-dark-blue">Enum 4</a>
+                        <a href="#tab4" class="nav-link text-custom-dark-blue" data-bs-toggle="tab">Enum 4</a>
                     </div>
                 </div>
             </div>
-            <div class="col-11 p-1">
-                <button class="btn btn-outline-primary" id="test">test</button>
+            <!-- end navbar -->
+            <div class="col-10 p-1 tab-content">
+                <div class="tab-pane fade" id="tab1">
+                    <button class="btn btn-outline-primary" id="test1">Test Enum 1</button>
+                </div>
+                <div class="tab-pane fade" id="tab2">
+                    <button class="btn btn-outline-primary" id="test2">Test Enum 2</button>
+                </div>
+                <div class="tab-pane fade" id="tab3">
+                    <button class="btn btn-outline-primary" id="test3">Test Enum 3</button>
+                </div>
+                <div class="tab-pane fade" id="tab4">
+                    <button class="btn btn-outline-primary" id="test4">Test Enum 4</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
-
-<script>
-    addEventListener("load", function () {
-        document.getElementById("test").addEventListener("click", function () {
-            alert("button clicked")
-        })
-    });
-</script>
