added support for hovering over an image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="mb-2 text-center w-100">
                         <a href="#tab1" class="nav-link text-custom-dark-blue show w-100 d-flex justify-content-center" data-bs-toggle="tab"
                            data-bs-placement="top" title="Tooltip on top">
-                            <button type="button" class="btn p-0 m-0" onmouseleave="replaceHover('tab-1-img', 'assets/icons/navbar/tools-tab-1.png')" onmouseenter="replaceHover('tab-1-img', 'assets/icons/navbar/tools-tab-1-hover.png')">
+                            <button type="button" class="btn p-0 m-0">
                                 <img id="tab-1-img" data-bs-toggle="tooltip"
                                     data-bs-placement="top" title="General tooling" src="assets/icons/navbar/tools-tab-1.png" width="25px" height="25px;">
                             </button>
@@ -46,16 +46,16 @@
                     <!-- tab 2 - recon tools -->
                     <div class="mb-2 text-center w-100">
                         <a href="#tab2" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center" data-bs-toggle="tab">
-                            <button type="button" class="btn p-0 m-0" onmouseleave="replaceHover('tab-2-img', 'assets/icons/navbar/tools-tab-1.png')" onmouseenter="replaceHover('tab-2-img', 'assets/icons/navbar/tools-tab-1-hover.png')">
+                            <button type="button" class="btn p-0 m-0">
                                 <img id="tab-2-img" data-bs-toggle="tooltip"
-                                    data-bs-placement="top" title="Recon tooling" src="assets/icons/navbar/tools-tab-1.png" width="25px" height="25px;">
+                                    data-bs-placement="top" title="Recon tooling" src="assets/icons/navbar/recon-tools-tab-2.png" width="25px" height="25px;">
                             </button>
                         </a>
                     </div>
                     <!-- tab 3 - exploit assistant -->
                     <div class="mb-2 text-center w-100">
                         <a href="#tab3" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center" data-bs-toggle="tab">
-                            <button type="button" class="btn p-0 m-0" onmouseleave="replaceHover('tab-3-img', 'assets/icons/navbar/tools-tab-1.png')" onmouseenter="replaceHover('tab-3-img', 'assets/icons/navbar/tools-tab-1-hover.png')">
+                            <button type="button" class="btn p-0 m-0">
                                 <img id="tab-3-img" data-bs-toggle="tooltip"
                                     data-bs-placement="top" title="Exploit assistant" src="assets/icons/navbar/tools-tab-1.png" width="25px" height="25px;">
                             </button>
@@ -64,7 +64,7 @@
                     <!-- tab 4 - shell assistant -->
                     <div class="mb-2 text-center w-100">
                         <a href="#tab4" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center" data-bs-toggle="tab">
-                            <button type="button" class="btn p-0 m-0" onmouseleave="replaceHover('tab-4-img', 'assets/icons/navbar/tools-tab-1.png')" onmouseenter="replaceHover('tab-4-img', 'assets/icons/navbar/tools-tab-1-hover.png')">
+                            <button type="button" class="btn p-0 m-0">
                                 <img id="tab-4-img" data-bs-toggle="tooltip"
                                     data-bs-placement="top" title="Shell assistant" src="assets/icons/navbar/tools-tab-1.png" width="25px" height="25px;">
                             </button>
@@ -73,7 +73,7 @@
                     <!-- tab 5 - checklist assistant -->
                     <div class="mb-2 text-center w-100">
                         <a href="#tab5" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center" data-bs-toggle="tab">
-                            <button type="button" class="btn p-0 m-0" onmouseleave="replaceHover('tab-5-img', 'assets/icons/navbar/tools-tab-1.png')" onmouseenter="replaceHover('tab-5-img', 'assets/icons/navbar/tools-tab-1-hover.png')">
+                            <button type="button" class="btn p-0 m-0">
                                 <img id="tab-5-img" data-bs-toggle="tooltip"
                                     data-bs-placement="top" title="Checklist assistant" src="assets/icons/navbar/tools-tab-1.png" width="25px" height="25px;">
                             </button>
@@ -82,7 +82,7 @@
                     <!-- tab 6 - handy commands -->
                     <div class="mb-2 text-center w-100">
                         <a href="#tab6" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center" data-bs-toggle="tab">
-                            <button type="button" class="btn p-0 m-0" onmouseleave="replaceHover('tab-6-img', 'assets/icons/navbar/tools-tab-1.png')" onmouseenter="replaceHover('tab-6-img', 'assets/icons/navbar/tools-tab-1-hover.png')">
+                            <button type="button" class="btn p-0 m-0">
                                 <img id="tab-6-img" data-bs-toggle="tooltip"
                                     data-bs-placement="top" title="Usefull commands" src="assets/icons/navbar/tools-tab-1.png" width="25px" height="25px;">
                             </button>
@@ -91,7 +91,7 @@
                     <!-- tab 7 - todo -->
                     <div class="mb-2 text-center w-100">
                         <a href="#tab7" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center" data-bs-toggle="tab">
-                            <button type="button" class="btn p-0 m-0" onmouseleave="replaceHover('tab-7-img', 'assets/icons/navbar/tools-tab-1.png')" onmouseenter="replaceHover('tab-7-img', 'assets/icons/navbar/tools-tab-1-hover.png')">
+                            <button type="button" class="btn p-0 m-0">
                                 <img id="tab-7-img" data-bs-toggle="tooltip"
                                     data-bs-placement="top" title="Checklist assistant" src="assets/icons/navbar/tools-tab-1.png" width="25px" height="25px;">
                             </button>
@@ -100,7 +100,7 @@
                     <!-- tab 8 - todo -->
                     <div class="mb-2 text-center w-100">
                         <a href="#tab8" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center" data-bs-toggle="tab">
-                            <button type="button" class="btn p-0 m-0" onmouseleave="replaceHover('tab-8-img', 'assets/icons/navbar/tools-tab-1.png')" onmouseenter="replaceHover('tab-8-img', 'assets/icons/navbar/tools-tab-1-hover.png')">
+                            <button type="button" class="btn p-0 m-0">
                                 <img id="tab-8-img" data-bs-toggle="tooltip"
                                     data-bs-placement="top" title="Checklist assistant" src="assets/icons/navbar/tools-tab-1.png" width="25px" height="25px;">
                             </button>
